Created object and added to array

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <!-- Input fields for adding new task with task-name, category, deadline, and status. -->
 
     <div id="task-orm"> 
-    <label for="task-name">Enter Task Name </label>
-    <input id="task-name"  type="text"  placeholder="Enter taskn name"></Input>
+        <label for="task-name">Enter Task Name </label>
+        <input id="task-name"  type="text"  placeholder="Enter taskn name"></Input>
 
-    <label for="category">Enter category </label>
-    <input id="category" type="text" placeholder="Enter category"></Input>
+        <label for="category">Enter category </label>
+        <input id="category" type="text" placeholder="Enter category"></Input>
 
     <label for="deadline">Enter deadline </label>
     <input id="deadline" type="date" placeholder="Enter deadline"></Input>
@@ -40,10 +40,9 @@
 
     <label for="status">Status </label>
     <Select id="status">
-        <option value="">---Select---</option>
-        <option value="In-progress"></option>
+        <option value="In-progress" selected></option>
         <option value="Completed"></option>
-        <option value=“Overdue"></option>
+        <option value="Overdue"></option>
     </Select>
 </div>  
 
