--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 
-    <main class="app-container" >
+    <main class="app-container">
 
         <h2>Task Management App</h2>
 
@@ -22,10 +22,10 @@
             <label for="task-name">Task Name </label>
             <input id="task-name" type="text" placeholder="Enter taskn name"></Input>
 
-            <label for="category">category </label>
+            <label for="category">Category </label>
             <input id="category" type="text" placeholder="Enter category"></Input>
 
-            <label for="deadline">deadline </label>
+            <label for="deadline">Deadline </label>
             <input id="deadline" type="date" placeholder="Enter deadline"></Input>
 
             <!-- <!-- dropdown buuon to filterstatus -->
@@ -41,7 +41,7 @@
         <!-- add task button -->
 
         <button id="add-task-btn">Add New Task</button>
-              <!-- Remove Task button -->
+        <!-- Remove Task button -->
         <button id="remove-task-btn">Remove Task</button>
         <button id="update-task-btn">Update Task</button>
 
@@ -51,23 +51,23 @@
             <h3>Task-List</h3>
             <Select id="filter-status">
                 <option value="All" selected>All Status</option>
-                <option value="In-progress" >In-progress</option>
+                <option value="In-progress">In-progress</option>
                 <option value="Completed">Completed</option>
                 <option value="Overdue">Overdue</option>
             </Select>
 
             <select id="filter-category">
-  <option value="all">All Categories</option>
-  <option value="Work">Work</option>
-  <option value="Personal">Personal</option>
-</select>
+                <option value="all">All Categories</option>
+                <option value="Work">Work</option>
+                <option value="Personal">Personal</option>
+            </select>
 
             <ul id="task-list">
 
             </ul>
         </div>
 
-  
+
 
     </main>
 
